--- a/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
+++ b/UAlbertaBot/VisualStudio/UAlbertaBot.vcxproj.filters
@@ -267,5 +267,8 @@
     <ClInclude Include="..\Source\BaseLocation.h">
       <Filter>macro</Filter>
     </ClInclude>
+    <ClInclude Include="..\Source\StarcraftMap.hpp">
+      <Filter>util</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
